--- a/SECURE-iT-Yourself/MainPage/Isabelle_News.xaml
+++ b/SECURE-iT-Yourself/MainPage/Isabelle_News.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MainPage.Login"
+﻿<Window x:Class="MainPage.Isabelle_News"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,10 +10,15 @@
     <Window.Background>
         <ImageBrush ImageSource="pack://application:,,,/Images/pineapple.jpg" Opacity="0.7"  />
     </Window.Background>
+
+
+
     <Grid>
+
         <Label Content="News and Updates" HorizontalAlignment="Center" Margin="230,34,170.333,0" VerticalAlignment="Top" Width="493" Height="77" FontSize="48" FontStyle="Italic" Foreground ="White"/>
         <DockPanel>
             <Canvas>
+                <!--HamBurger-->
                 <StackPanel  Background="#2b303b" Width="165" Margin="-101,0,0,0">
                     <StackPanel.Style>
                         <Style TargetType="StackPanel">
@@ -56,18 +61,30 @@
                     </DockPanel>
                     <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,10">
                         <Label Content="UPDATES" VerticalAlignment="Center" Foreground="White" Width="90"/>
-                        <Image Source="Images/arrow_circle_left.png" Width="25" Height="25"/>
+                        <Image Source="Images/updates-512.png" Width="25" Height="25"/>
+                    </DockPanel>
+                    <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,10">
+                        <Label Content="LOGOUT" VerticalAlignment="Center" Foreground="White" Width="90"/>
+                        <Image Source="Images/logout-512.png" Width="25" Height="25"/>
                     </DockPanel>
                 </StackPanel>
-
                 <Border Background="#FFFFFF" Margin="0,0,0,-0.333" Width="837" >
-                    <Grid>
 
-                    </Grid>
                 </Border>
-                <TextBox Height="31" Canvas.Left="155" TextWrapping="Wrap" Text="Enter News/Updates" TextAlignment="Center" Canvas.Top="147" Width="546"/>
-                <Button Content="Search" Canvas.Left="732" Canvas.Top="147" Width="88" RenderTransformOrigin="-0.009,0.267" Height="31"/>
+                <TextBox Height="22" Canvas.Left="118" TextWrapping="Wrap"  Canvas.Top="122" Width="554" Name="TextBox_Search" />
+
+
+                <!---<ListBox Height="349" Canvas.Left="122" Canvas.Top="167" Width="631" Name="ListBox_list">
+                    
+                //</ListBox>-->
+                <Label Canvas.Left="107" Canvas.Top="338"/>
+                <TextBox Height="393" Canvas.Left="122" TextWrapping="Wrap" Name="TextBox1" Canvas.Top="168" Width="592"/>
+                <Button Content="Search" Canvas.Left="717" Canvas.Top="122" Width="101" Height="22" Click="SearchButton1_Click"/>
+
+                <!--RSS-->
+
             </Canvas>
         </DockPanel>
+
     </Grid>
 </Window>
