--- a/SECURE-iT-Yourself/MainPage/Isabelle_News.xaml
+++ b/SECURE-iT-Yourself/MainPage/Isabelle_News.xaml
@@ -61,11 +61,11 @@
                     </DockPanel>
                     <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,10">
                         <Label Content="UPDATES" VerticalAlignment="Center" Foreground="White" Width="90"/>
-                        <Image Source="Images/updates-512.png" Width="25" Height="25"/>
+                        <Image Source="Images/updates-icon.png" Width="25" Height="25"/>
                     </DockPanel>
                     <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,10">
                         <Label Content="LOGOUT" VerticalAlignment="Center" Foreground="White" Width="90"/>
-                        <Image Source="Images/logout-512.png" Width="25" Height="25"/>
+                        <Image Source="Images/logout-icon.png" Width="25" Height="25"/>
                     </DockPanel>
                 </StackPanel>
                 <Border Background="#FFFFFF" Margin="0,0,0,-0.333" Width="837" >
