--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
@@ -53,8 +53,8 @@
                     </Grid>
 
                     <StackPanel Orientation="Horizontal" Grid.Column="2">
-                        <Button Cursor="Hand" Height="40" Width="100" Background="ForestGreen" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Search</Button>
-                        <TextBox Height="40" Width="235"></TextBox>
+                        <Button Click="Search_Log" Cursor="Hand" Height="40" Width="100" Background="ForestGreen" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Search</Button>
+                        <TextBox Name="SearchBox" Height="40" Width="235"></TextBox>
                     </StackPanel>
                 </Grid>
 
@@ -111,7 +111,7 @@
 
 
                     <Button Click="Upload_Log" FontSize="25" Background="ForestGreen" Margin="10,0,0,0" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Add New Log</Button>
-                    <Button Margin="0,0,10,0" Grid.Column="2" FontSize="25" Background="DarkSeaGreen" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Create Report</Button>
+                    <Button Visibility="Hidden" Margin="0,0,10,0" Grid.Column="2" FontSize="25" Background="DarkSeaGreen" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Create Report</Button>
                 </Grid>
                 
             </Grid>
